--- a/springboot/addons/jbpm-usertask-storage-jpa/pom.xml
+++ b/springboot/addons/jbpm-usertask-storage-jpa/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jbpm</groupId>
             <artifactId>jbpm-addons-usertask-storage-jpa</artifactId>
         </dependency>
